[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartseo-analyzer"
version = "2.0.0"
authors = [
  {name = "Enhanced by AI", email = "smartseo@example.com"},
  {name = "Original by Seth Black", email = "sblack@sethserver.com"},
]
dependencies = [
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "Jinja2==3.1.6",
    "langchain==0.3.22",
    "langchain-openai",
    "lxml==5.3.1",
    "MarkupSafe==3.0.2",
    "python-dotenv==1.1.0",
    "trafilatura==2.0.0",
    "urllib3==2.5.0",
]
requires-python = ">= 3.8"
description = "An intelligent SEO analysis tool with AI-powered insights and user-friendly web interface. Combines traditional technical SEO checks with modern AI analysis capabilities."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "seo analysis",
    "artificial intelligence", 
    "web interface",
    "search engine optimization",
    "website analyzer",
    "ai powered seo",
    "smart seo tool",
    "seo audit",
    "technical seo",
    "seo crawler",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
python-seo-analyzer = "pyseoanalyzer.__main__:main"

[project.urls]
Homepage = "https://github.com/sethblack/python-seo-analyzer"
Repository = "https://github.com/sethblack/python-seo-analyzer.git"
Issues = "https://github.com/sethblack/python-seo-analyzer/issues"
